--- a/app/src/main/res/layout/activity_cview.xml
+++ b/app/src/main/res/layout/activity_cview.xml
@@ -15,9 +15,9 @@
 
     <com.rodionov.simplecustomdraw.view.SimpleView
         android:id="@+id/simpleView"
-        android:layout_gravity="center"
-        android:layout_width="100dp"
-        android:layout_height="100dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 
     <Button
         android:id="@+id/decrement"
