--- a/app/src/main/res/layout/coach_diagram_view.xml
+++ b/app/src/main/res/layout/coach_diagram_view.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/simpleView_CV"
-        android:layout_alignBottom="@id/simpleView_CV"
-        android:layout_alignLeft="@id/simpleView_CV"
-        android:layout_alignRight="@id/simpleView_CV"
+        android:layout_alignTop="@id/diagramView"
+        android:layout_alignBottom="@id/diagramView"
+        android:layout_alignLeft="@id/diagramView"
+        android:layout_alignRight="@id/diagramView"
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical">
@@ -18,18 +19,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/currentValue"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="28sp"
+                tools:text="52"/>
+
             <TextView
-                android:text=" из "
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text=" из "
+                android:textSize="14sp" />
+
             <TextView
                 android:id="@+id/totalValue"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                tools:text="90"/>
         </LinearLayout>
 
         <TextView
@@ -37,18 +46,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Тренировок" />
-
+            android:text="ТРЕНИРОВОК" />
 
     </LinearLayout>
 
-
-
-    <com.rodionov.simplecustomdraw.view.SimpleView
-        android:id="@+id/simpleView_CV"
+    <com.rodionov.simplecustomdraw.view.DiagramView
+        android:id="@+id/diagramView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true" />
-
 
 </merge>
